Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1450

LogBlockManager start-up is slow due to MemTracker atomic contention

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.8.0
    • 0.9.0
    • fs, perf
    • None

    Description

      I'm looking at startup time on a cluster with lots of data per node. On this cluster, the tablet server takes about 30 seconds to start the LogBlockManager, and appears CPU bound. I grabbed a profile and it seems like most of the CPU is spent in MemTracker::Release and Consume (see attached flame graph).

      Attachments

        1. fg.svg
          151 kB
          Todd Lipcon

        Activity

          People

            tlipcon Todd Lipcon
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: