KUDU-1450. Avoid contention during LogBlockManager startup

This defers the tracking of block memory during LBM startup until
after each container is fully parsed and added to the block map.

In testing on a machine with a couple TB of data, this reduced
the LBM startup time from about 30 seconds down to about 10.

Change-Id: Ie680389e5e08dff89862ef32b652a9cc73f458f5
Reviewed-on: http://gerrit.cloudera.org:8080/3042
Tested-by: Kudu Jenkins
Reviewed-by: Adar Dembo <adar@cloudera.com>